--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-slim-mask",
-  "version": "1.0.22",
-  "description": "A input mask directtive compatible with Vue 3",
+  "version": "1.0.23",
+  "description": "A input mask directtive compatible with Vue 3 (~1.5kb)",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest --config jestconfig.json",
